feat: refactor the schedule to allow schedule policy config
